--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,24 @@
+project.name=cross-teleport
+
 version=1.0.0-SNAPSHOT
+
+spotless.apply=false
+
+dev=true
+
+org.gradle.parallel=true
+org.gradle.jvmargs=\
+  --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
+  --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
+  --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED \
+  --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
+  --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+
+shade.package=tr.com.infumia.crossteleport.shaded
+relocations=
+
+shadow.enabled=false
+shadow.relocation=false
+smol.enabled=false
+smol.relocation=false
+maven.publish=false
